--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
+    "path": "^0.12.7",
     "tailwind": "^4.0.0"
   }
 }
