--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.0",
+    "morgan": "^1.9.1",
     "path": "^0.12.7",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
