--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "lodash": "^4.17.11",
+    "lodash": "~4.17.14",
     "mongoose": "^5.3.16",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
